heading mobile overlap fix

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -53,6 +53,7 @@
 
     .subHeading{
         margin-right: 0;
+        font-size: 35px;
     }
 
 
